@@ -16,6 +16,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -60,9 +61,9 @@ public class SecurityConfig {
 
     private CorsConfiguration getDefaultCorsConfiguration() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));// 모든 ip 응답을 허용
-        configuration.setAllowedHeaders(Arrays.asList("*")); // 모든 header 에 응답을 허용
-        configuration.setAllowedMethods(Arrays.asList("*")); // 모든 get,post,patch,put,delete 요청 허용
+        configuration.setAllowedOriginPatterns(List.of("*"));// 모든 ip 응답을 허용
+        configuration.setAllowedHeaders(List.of("*")); // 모든 header 에 응답을 허용
+        configuration.setAllowedMethods(List.of("*")); // 모든 get,post,patch,put,delete 요청 허용
         configuration.setAllowCredentials(true); // 내 서버가 응답할 때 json 을 자바스크립트에서 처리할 수 있게 할지를 설정하는 것
         configuration.setMaxAge(3600L);
         return configuration;
